--- a/app/src/main/res/layout/cabecera.xml
+++ b/app/src/main/res/layout/cabecera.xml
@@ -7,26 +7,37 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:src="@drawable/navheader"
+        android:src="@drawable/fondo_gmail"
         android:scaleType="centerCrop" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edison"
+        android:text="Edison Untuña"
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         android:textStyle="bold"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="28dp"
         android:layout_marginLeft="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="edison.untuna2018@uteq.edu.ec"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
+        android:textSize="12sp"
+        android:textStyle="bold" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="70dp"
         android:layout_height="60dp"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="50dp"
-        android:src="@drawable/user"
+        android:layout_marginBottom="65dp"
+        android:src="@drawable/usuario"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp" />
 </FrameLayout>
